diesel_compile_tests/tests/fail/must_use_query_methods.stderr
error: unused `SelectStatement` that must be used
  --> $DIR/must_use_query_methods.rs:17:5
   |
17 |     st.select(b);
   |     ^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/must_use_query_methods.rs:1:9
   |
1  | #![deny(unused_must_use)]
   |         ^^^^^^^^^^^^^^^
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `SelectStatement` that must be used
  --> $DIR/must_use_query_methods.rs:18:5
   |
18 |     st.select(b).distinct();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `SelectStatement` that must be used
  --> $DIR/must_use_query_methods.rs:19:5
   |
19 |     st.count();
   |     ^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `SelectStatement` that must be used
  --> $DIR/must_use_query_methods.rs:20:5
   |
20 |     st.order(b);
   |     ^^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `SelectStatement` that must be used
  --> $DIR/must_use_query_methods.rs:21:5
   |
21 |     st.limit(1);
   |     ^^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `SelectStatement` that must be used
  --> $DIR/must_use_query_methods.rs:22:5
   |
22 |     st.offset(1);
   |     ^^^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `SelectStatement` that must be used
  --> $DIR/must_use_query_methods.rs:24:5
   |
24 |     st.filter(b.eq(true));
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `SelectStatement` that must be used
  --> $DIR/must_use_query_methods.rs:25:5
   |
25 |     st.filter(b.eq(true)).limit(1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `IncompleteInsertStatement` that must be used
  --> $DIR/must_use_query_methods.rs:27:5
   |
27 |     insert_into(st);
   |     ^^^^^^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `InsertStatement` that must be used
  --> $DIR/must_use_query_methods.rs:28:5
   |
28 |     insert_into(st).values(&vec![b.eq(true), b.eq(false)]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `UpdateStatement` that must be used
  --> $DIR/must_use_query_methods.rs:30:5
   |
30 |     update(st).set(b.eq(true));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.

error: unused `DeleteStatement` that must be used
  --> $DIR/must_use_query_methods.rs:32:5
   |
32 |     delete(st);
   |     ^^^^^^^^^^^
   |
   = note: Queries are only executed when calling `load`, `get_result` or similar.
